# brief

./: .gitignore  README.md  main.py  pyproject.toml
app/: config.py  models.py  routes.py  services.py
app/static/: index.html
brief/: __init__.py
tests/: test_routes.py
